# ApertusX

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
cmake/: Live555.cmake
docs/: optimization.md
include/helpers/: UrlUtils.h
include/interfaces/: IConfigService.h  IEventService.h  ILoggerService.h  IPlugin.h  IPluginService.h  IReplica.h  IReplicaFactory.h  IReplicaRegistrar.h  IReplicaService.h
scripts/: monitor_memory.sh
src/core/: CMakeLists.txt
src/core/config/: ConfigService.cpp  ConfigService.h
src/core/di/: DependencyInjection.cpp  DependencyInjection.h
src/core/event/: EventService.cpp  EventService.h
src/core/logger/: LoggerService.cpp  LoggerService.h
src/core/plugin/: Plugin.cpp  Plugin.h  PluginService.cpp  PluginService.h
src/core/replica/: AudioReplica.h  Replica.cpp  Replica.h  ReplicaFactory.cpp  ReplicaFactory.h  ReplicaRegistrar.h  ReplicaService.cpp  ReplicaService.h
src/core/replica/replicas/: AudioReplica.cpp  AudioReplica.h
src/main/: CMakeLists.txt  main.cpp
src/plugins/gstreamer/: CMakeLists.txt  GStreamerPlugin.cpp  GStreamerPlugin.h  README.md
src/plugins/myplugin/: CMakeLists.txt  MyPlugin.cpp  MyPlugin.h
